# brace-industries

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  build.py  pyproject.toml
content/: about.md  projects.yaml
content/drafts/: draft-example.md  the-bitter-lesson-of-data-warehousing.md  why-i-want-to-work-at-stripe.md
content/posts/: building-static-sites.md  spec-driven-data-engineering.md  the-bitter-lesson-of-data-warehousing.md  welcome.md
docs/: CNAME  about.html  contact.html  feed.xml  index.html  projects.html
docs/static/: style.css  syntax.css
docs/writing/: index.html
docs/writing/building-static-sites/: index.html
docs/writing/spec-driven-data-engineering/: index.html
docs/writing/the-bitter-lesson-of-data-warehousing/: index.html
docs/writing/welcome/: index.html
src/: build.rs  config.rs  content.rs  highlight.rs  lib.rs  main.rs  new.rs  publish.rs  serve.rs  templates.rs
static/: style.css  theme.js
templates/: about.html  base.html  contact.html  feed.xml  home.html  post.html  projects.html  writing.html
